<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Antonio Leiva Gordillo.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">TAssignment1</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registration</string>
    <string name="title_profile">Profile</string>
    <string name="title_share">Share</string>
    <string name="title_logout">Logout</string>
    
    <!--sohel start  -->
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="textConfirmPassword">Confirm Password</string>
    <string name="textRegButton">Register</string>
    <string name="textLogin">Login</string>
    <string name="textFirstName">Firstname</string>
    <string name="textLastName">Lastname</string>
     <string name="textNewPassword">New Password</string>
     <string name="textEditButton">Edit</string>
      <string name="textSaveButton">Save</string>
      <string name="hintCurrentPassword">Please Enter Current Password</string>
       <string name="hintNewPassword">Enter New Password</string>
       <string name="textNotRegistered">Not registered yet?</string>
       
    <!--sohel end  -->
    
    <string name="facebook_app_id">223481731155936</string>
    <string name="twitter_consumer_key">fm7M82ILfRkw5AC985HBGcsB9</string>
    <string name="twitter_consumer_secret">zPsPjTbYSiHJvgxnYtX0OrmyTxCZ30GSeWYmL7C6SMRungKSjA</string>
    <string name="instagram_client_id">fdfe48384e5a4434ba68b6c632469411</string>
    <string name="instagram_client_secret">a0518715b7b24e91addcf3d9bed75ae6</string>

</resources>
