<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.technext.tassignment1.fragments.LoginFragment">
    
    <RelativeLayout 
        android:layout_width="match_parent"
   		android:layout_height="match_parent"
   		android:paddingLeft="20dp"
   		android:paddingTop="20dp"
   		android:paddingRight="20dp">
   		
        <TextView 
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/textEmail"
            />
        <EditText 
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/textViewEmail"
            android:elevation="-5dp"
            android:translationZ="-5dp"/>
        
         <TextView 
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/editTextEmail"
            android:text="@string/textPassword"/>
         	
        <EditText 
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/textViewPassword"/>
        
         <Button
            android:id="@+id/buttonLogin"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_below="@+id/editTextPassword"
            android:text="@string/textLogin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
        
         <LinearLayout 
             android:id="@+id/registerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_below="@+id/buttonLogin"
             android:layout_alignParentRight="true"
             >
             
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textNotRegistered"/>
              <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textRegButton"
                 android:textColor="#3b5998"
                 android:textSize="15sp"
                 android:paddingLeft="2dp"
                 />
         </LinearLayout>
        
    </RelativeLayout>
    
    

</RelativeLayout>
