<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.technext.tassignment1.fragments.RegistrationFragment" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
   		android:layout_height="match_parent"
   		android:paddingLeft="20dp"
   		android:paddingTop="20dp"
   		android:paddingRight="20dp">
   		
        <TextView 
            android:id="@+id/textViewFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/textFirstName"
            />
        <EditText 
            android:id="@+id/editTextFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/textViewFirstname"
            />
        
        <TextView 
            android:id="@+id/textViewLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/textLastName"
             android:layout_below="@+id/editTextFirstname"
            />
        <EditText 
            android:id="@+id/editTextLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/textViewLastname"
           />
        
        <TextView 
            android:id="@+id/textViewEmailReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/textEmail"
             android:layout_below="@+id/editTextLastname"
            />
        <EditText 
            android:id="@+id/editTextEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/textViewEmailReg"
           />
        
         <TextView 
            android:id="@+id/textViewPasswordReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/editTextEmailReg"
            android:text="@string/textPassword"/>
         	
        <EditText 
            android:id="@+id/editTextPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/textViewPasswordReg"
           />
        <TextView 
            android:id="@+id/textViewConfirmPasswordReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/editTextPasswordReg"
            android:text="@string/textConfirmPassword"/>
         	
        <EditText 
            android:id="@+id/editTextConfirmPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/textViewConfirmPasswordReg"
           />
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextConfirmPasswordReg"
            android:text="@string/textRegButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
        
        
    </RelativeLayout>
    

</RelativeLayout>
